Major update to the backend. 1. changed data source, modified db schema 2. moved db config to context bean, removed the config class 3. updated all DAOs 4. added community related DAO & bean

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,8 +30,12 @@
         <param-value>
             <!-- Loads Spring Security config file -->
             /WEB-INF/spring-security.xml,
+
             <!-- Loads Spring Database config file -->
-            /WEB-INF/spring-database.xml
+            /WEB-INF/spring-database.xml,
+
+            <!--Other Context-->
+            /WEB-INF/context.xml
         </param-value>
     </context-param>
 
