--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <version>3.2.4.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>javax.servlet</groupId>-->
             <!--<artifactId>javax.servlet-api</artifactId>-->
